<resources>
    <string name="app_name">FragmentDemo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>


    //Validation
    <string name="validation_please_enter_an_email_address">Please enter an email address</string>
    <string name="validation_please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="validation_please_enter_a_password">Please enter a password</string>
    <string name="validation_password_length_must_be_6_digits">Password length must be 6 digits</string>
    <string name="paragraph">A Terms and Conditions agreement is where you let the public know the terms, rules and guidelines for using your website or mobile app. They include topics such as acceptable use, restricted behavior and limitations of liability. This article will get you started with creating your own custom Terms and Conditions agreement. We\'ve also put together a Sample Terms and Conditions Template that you can use to help you write your own.</string>
    <string name="one">1</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="custom_viewpager">Custom ViewPager</string>
    <string name="fragment_viewpager">Fragment ViewPager</string>
    <string name="fragmentstate_viewpager">FragmentState ViewPager</string>
    <string name="viewpager2">ViewPager2</string>
    <string name="view_pager_task">View Pager Task</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="recycler_task_1">Recycler Task 1</string>
    <string name="finish">FINISH</string>
    <string name="finished">Finished</string>
    <string name="viewpager_task_2">ViewPAger Task 2</string>
    <string name="_5d_left">5d left</string>
    <string name="buton_join_group">join Group</string>
    <string name="text_2_seats_left">2 Seats left</string>
    <string name="text_6_month">6 Month</string>
    <string name="text_15_may_2021">15 May 2021</string>
    <string name="text_amount_5000">Amount : $5000</string>
    <string name="text_friend_platform">Friend platform</string>
    <string name="super_saving">Super Saving</string>
    <string name="both_scroll_vertical_horizontal"><![CDATA[Both Scroll(Vertical & Horizontal)]]></string>
    <string name="start_download">Start Download</string>


</resources>